[BUGFIX] Fix arrow alignment on inspector validation errors
Related: #52175
Reviewed-on: https://review.typo3.org/24029
Tested-by: Aske Ertmann
Tested-by: Sebastian Kurfuerst
Original-Commit-Hash: e582a3948b0f7e7e09d14f07f6972b2dbf07dc86

--- a/TYPO3.Neos/Resources/Private/Styles/Inspector/_Inspector.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Inspector/_Inspector.scss
@@ -429,7 +429,7 @@
 		}
 
 		.neos-tooltip {
-			&.bottom {
+			&.neos-bottom {
 				padding: $relatedMargin 0 0 0;
 				margin-left: $tightMargin;
 				margin-top: -1px;
